Follow-up to  bug #16624: Decrease opacity of black ExtJS mask - make mask message readable
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@9729 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/extjs/xtheme-t3skin.css
+++ b/typo3/sysext/t3skin/extjs/xtheme-t3skin.css
@@ -497,6 +497,11 @@ body.x-body-masked .x-window-mc, body.x-body-masked .x-window-plain .x-window-mc
 	filter:alpha(opacity=75);
 }
 
+.ext-el-mask-msg div {
+	background-image: url(images/grid/loading.gif);
+	background-color: #fff;
+}
+
 /* mask while loading */
 .t3-mask-loading .ext-el-mask {
 	background-color: #f8f8f8;
